--- a/Makefile.Unix
+++ b/Makefile.Unix
@@ -2,6 +2,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.2  1997/02/12 18:04:41  jbk
+# added new program to monitor pv and call script when value changes
+#
 # Revision 1.1  1995/01/25 17:10:49  jba
 # Initial version
 #
@@ -16,9 +19,9 @@ DEPLIBS = $(EPICS_BASE_LIB)/libca.a  $(EPICS_BASE_LIB)/libCom.a
 
 USR_LDLIBS = -lca -lCom
 
-SRCS.c = ../camonitor.c
+SRCS.c = ../camonitor.c ../camonitorpv.c
 
-PROD = camonitor
+PROD = camonitor camonitorpv
 
 include $(EPICS)/config/RULES.Unix
 
