Updates to allow building with base R3.14.

--- a/Makefile.Host
+++ b/Makefile.Host
@@ -10,6 +10,12 @@ include $(TOP)/config/CONFIG_EXTENSIONS
 
 USR_LIBS = ca Com
 
+ifdef BASE_3_14
+USR_LIBS += ts
+ts_DIR = $(INSTALL_LIB)
+SYS_PROD_LIBS += posix4 pthread thread
+endif
+
 PROD_DEFAULT = camonitor camonitorpv
 PROD_WIN32 = camonitor
 
