Added Darwin specific PROD line.

--- a/Makefile.Host
+++ b/Makefile.Host
@@ -27,6 +27,7 @@ SYS_PROD_LIBS_WIN32 += ws2_32
 
 PROD_DEFAULT = camonitor camonitorpv
 PROD_WIN32 = camonitor
+PROD_Darwin = camonitor
 
 camonitor_SRCS = camonitor.c
 camonitorpv_SRCS = camonitorpv.c
